# ANA_bonusproject

./: README.md  pyproject.toml
analysis/: __init__.py  convergence_2d.py  convergence_3d.py  exact_solutions.py  test_case_1_decaying_bubble_2d.py  test_case_1_decaying_bubble_2d_report.txt  test_case_1_decaying_bubble_3d.py  test_case_1_decaying_bubble_3d_report.txt  test_case_2_standing_wave_2d.py  test_case_2_standing_wave_2d_report.txt  test_case_2_standing_wave_3d.py  test_case_2_standing_wave_3d_report.txt  test_case_3_quadratic_decay_2d.py  test_case_3_quadratic_decay_2d_report.txt  test_case_3_quadratic_decay_3d.py  test_case_3_quadratic_decay_3d_report.txt
docs/: solver_2d_dyakonov.md  solver_3d_douglas_gunn.md  test_case_1_decaying_bubble_2d.md  test_case_1_decaying_bubble_3d.md  test_case_2_standing_wave_2d.md  test_case_2_standing_wave_3d.md  test_case_3_quadratic_decay_2d.md  test_case_3_quadratic_decay_3d.md
problems/: __init__.py  problem_2d_example.py  problem_3d_example.py  solution_2d_data.npz  solution_3d_data.npz
src/heat_solver/: __init__.py  analysis.py  boundary.py  solver_2d.py  solver_3d.py  tridiagonal.py  visualization.py
